<resources>
    <string name="app_name">My Shopping List</string>
    <string name="nama_transaksi">Nama Transaksi</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="list_kosong">list kosong</string>
    <string name="create_product">CREATE PRODUCT</string>
    <string name="create_transaction">CREATE TRANSACTION</string>
</resources>